  * Moloch >= 0.20.0 requires NodeJS 6.x
  * Moloch >= 0.18.1 requires NodeJS 4.x

NOTICE: Restart wiseService before capture when upgrading
NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at once after upgrading

4.3.3 2023/07/xx
  - release - cyberchef 10.5.2
  - all - improved json verification
  - all - fix password changing permission checks
  - capture - handle port reuse better
  - capture - fix kafka memory leak when produce fails
  - cont3xt - New overview cards
  - viewer - gtp decoding
  - viewer - demo mode improvements, arkimeAdmin can use normally

4.3.2 2023/06/13
  - release - cyberchef 10.4.0 libpcap 1.10.4
  - all - config 'prefix' can be at most 50 characters
  - all - new cookie generation code
  - capture - handle packets better at epoch time
  - cont3xt - add twilio country code tidbit
  - cont3xt - add httpRealm to sample config
  - cont3xt - help improvements
  - cont3xt - minor UI improvements
  - db.pl - set ISM deleteTime for sessions correctly
  - esproxy - add tests
  - parliament - fixed occasional missing token error
  - viewer/wise - Field/Value actions now support all:true to show on every instance
  - viewer - Fix Src/Dst mouse over for packets/bytes
  - viewer - Field Actions didn't work in expanded meta
  - viewer - Fix sending/receiving sessions not working

4.3.1 2023/05/08
  - BREAKING - If running mixed versions of Arkime, broken cron queries error
               might show on OLD version
  - release - fix ubuntu22 kafka dep
  - all - passwordSecret log message now has the right [section]
  - capture - --tags option now works as well as --tag
  - viewer - new auto cronQueries setting
  - viewer - change where primary viewer info is stored to not cause constant
             mapping change
  - viewer - fixed ipv6 not working, now assumes zero filled with mask (if
             not provided)
  - viewer - code refactor into javascript classes

4.3.0 2023/04/27